--- a/public/index.html
+++ b/public/index.html
@@ -497,71 +497,137 @@
                 </div>
               </div>
 
-              <!-- Experience Timeline -->
               <div
-                class="card-base p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
+                class="card-base p-6 md:p-8 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
               >
-                <h3 class="text-2xl font-bold text-primary mb-6">Experience</h3>
-                <div
-                  class="relative space-y-8 before:absolute before:inset-0 before:ml-5 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-primary before:to-blue-500"
-                >
-                  <!-- Timeline Item -->
-                  <div class="relative flex gap-6 items-start ml-2">
-                    <div
-                      class="flex items-center justify-center w-10 h-10 rounded-full border-2 border-primary bg-white dark:bg-gray-800 z-10"
-                    >
-                      <i class="fas fa-briefcase text-primary"></i>
-                    </div>
-                    <div class="flex flex-col flex-1 gap-2">
-                      <h4 class="text-lg font-semibold">Senior Developer</h4>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Company Name
-                      </p>
-                      <p class="text-sm text-gray-500">2022 - Present</p>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Led development of multiple web applications using
-                        modern technologies.
-                      </p>
-                    </div>
-                    <!-- add more  -->
-                  </div>
-                  <!-- Timeline Item 2 -->
-                  <div class="relative flex gap-6 items-start ml-2">
-                    <div
-                      class="flex items-center justify-center w-10 h-10 rounded-full border-2 border-primary bg-white dark:bg-gray-800 z-10"
-                    >
-                      <i class="fas fa-code text-primary"></i>
-                    </div>
-                    <div class="flex flex-col flex-1 gap-2">
-                      <h4 class="text-lg font-semibold">Software Developer</h4>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Tech Company
-                      </p>
-                      <p class="text-sm text-gray-500">2020 - 2022</p>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Developed and maintained web applications using modern
-                        JavaScript frameworks.
-                      </p>
-                    </div>
-                  </div>
+                <h3 class="text-2xl md:text-3xl font-bold text-primary mb-8">
+                  Experience
+                </h3>
 
-                  <!-- Timeline Item 3 -->
-                  <div class="relative flex gap-6 items-start ml-2">
-                    <div
-                      class="flex items-center justify-center w-10 h-10 rounded-full border-2 border-primary bg-white dark:bg-gray-800 z-10"
-                    >
-                      <i class="fas fa-laptop-code text-primary"></i>
+                <!-- Experience Timeline -->
+                <div class="relative space-y-8">
+                  <!-- Timeline Line -->
+                  <div
+                    class="absolute left-6 md:left-8 top-0 h-full w-0.5 bg-gradient-to-b from-primary via-blue-400 to-blue-500 opacity-50"
+                  ></div>
+
+                  <div class="relative space-y-8">
+                    <!-- KMIPN Experience -->
+                    <div class="experience-item group">
+                      <div class="relative flex items-center">
+                        <div class="absolute left-6 md:left-8 -translate-x-1/2">
+                          <div class="timeline-dot timeline-dot-active"></div>
+                        </div>
+                        <div
+                          class="ml-12 md:ml-16 space-y-3 bg-white/70 dark:bg-gray-800/70 p-6 rounded-xl shadow-sm hover:shadow-md transition-all duration-300 w-full"
+                        >
+                          <div
+                            class="flex flex-wrap justify-between items-center gap-2"
+                          >
+                            <h4 class="text-lg font-semibold text-primary">
+                              Team Leader - ONAR Project
+                            </h4>
+                            <span
+                              class="text-sm font-medium px-3 py-1 rounded-full bg-primary/10 text-primary"
+                              >2023</span
+                            >
+                          </div>
+                          <h5
+                            class="text-base font-medium text-gray-600 dark:text-gray-300"
+                          >
+                            KMIPN VI Jakarta
+                          </h5>
+                          <p class="text-gray-600 dark:text-gray-400">
+                            Led team to 1st place victory in KMIPN VI
+                            competition. Managed project development and team
+                            coordination for innovative solution.
+                          </p>
+                          <div class="flex flex-wrap gap-2 mt-3">
+                            <span class="tech-badge">Project Management</span>
+                            <span class="tech-badge">Team Leadership</span>
+                            <span class="tech-badge">Innovation</span>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="flex flex-col flex-1 gap-2">
-                      <h4 class="text-lg font-semibold">Junior Developer</h4>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Startup Inc
-                      </p>
-                      <p class="text-sm text-gray-500">2019 - 2020</p>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Started career as a junior developer working on frontend
-                        projects.
-                      </p>
+
+                    <!-- PDAM Experience -->
+                    <div class="experience-item group">
+                      <div class="relative flex items-center">
+                        <div class="absolute left-6 md:left-8 -translate-x-1/2">
+                          <div class="timeline-dot timeline-dot-inactive"></div>
+                        </div>
+
+                        <div
+                          class="ml-12 md:ml-16 space-y-3 bg-white/70 dark:bg-gray-800/70 p-6 rounded-xl shadow-sm hover:shadow-md transition-all duration-300 w-full"
+                        >
+                          <div
+                            class="flex flex-wrap justify-between items-center gap-2"
+                          >
+                            <h4 class="text-lg font-semibold text-primary">
+                              Network Engineer
+                            </h4>
+                            <span
+                              class="text-sm font-medium px-3 py-1 rounded-full bg-primary/10 text-primary"
+                              >2022</span
+                            >
+                          </div>
+                          <h5
+                            class="text-base font-medium text-gray-600 dark:text-gray-300"
+                          >
+                            PDAM Tirta Khatulistiwa
+                          </h5>
+                          <p class="text-gray-600 dark:text-gray-400">
+                            Managed and maintained network infrastructure.
+                            Improved network performance and security
+                            implementations.
+                          </p>
+                          <div class="flex flex-wrap gap-2 mt-3">
+                            <span class="tech-badge">Networking</span>
+                            <span class="tech-badge">Infrastructure</span>
+                            <span class="tech-badge">Security</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- OSIS Experience -->
+                    <div class="experience-item group">
+                      <div class="relative flex items-center">
+                        <div class="absolute left-6 md:left-8 -translate-x-1/2">
+                          <div class="timeline-dot timeline-dot-inactive"></div>
+                        </div>
+
+                        <div
+                          class="ml-12 md:ml-16 space-y-3 bg-white/70 dark:bg-gray-800/70 p-6 rounded-xl shadow-sm hover:shadow-md transition-all duration-300 w-full"
+                        >
+                          <div
+                            class="flex flex-wrap justify-between items-center gap-2"
+                          >
+                            <h4 class="text-lg font-semibold text-primary">
+                              Student Council Chairman
+                            </h4>
+                            <span
+                              class="text-sm font-medium px-3 py-1 rounded-full bg-primary/10 text-primary"
+                              >2017 - 2018</span
+                            >
+                          </div>
+                          <h5
+                            class="text-base font-medium text-gray-600 dark:text-gray-300"
+                          >
+                            SMKN 1 Sintang
+                          </h5>
+                          <p class="text-gray-600 dark:text-gray-400">
+                            Led student organization, coordinated school events,
+                            and represented student body in school affairs.
+                          </p>
+                          <div class="flex flex-wrap gap-2 mt-3">
+                            <span class="tech-badge">Leadership</span>
+                            <span class="tech-badge">Event Management</span>
+                            <span class="tech-badge">Public Speaking</span>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
