--- a/public/index.html
+++ b/public/index.html
@@ -357,6 +357,15 @@
                 class="w-24 h-1 bg-gradient-to-r from-primary to-blue-500 mx-auto mt-4 rounded-full"
               ></div>
             </h2>
+            <a
+              href="https://drive.google.com/uc?id=1-AnQK1H-M3L_5jl-tm7BeHLhZM-ScQWJ&export=download"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="inline-flex items-center gap-2 mt-6 px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transition-all duration-300 transform hover:-translate-y-0.5"
+            >
+              <i class="fas fa-download"></i>
+              Download CV
+            </a>
           </div>
 
           <!-- Content Grid -->
@@ -382,16 +391,21 @@
                 <div class="space-y-4">
                   <h4 class="font-semibold text-lg">Tech Stack</h4>
                   <div class="flex flex-wrap gap-3">
-                    <span class="tech-badge tech-badge-react">
-                      <i class="fab fa-react"></i>React
+                    <span class="tech-badge tech-badge-flutter">
+                      <i class="fas fa-mobile-alt"></i>Flutter
+                    </span>
+                    <span class="tech-badge tech-badge-dart">
+                      <i class="fas fa-code"></i>Dart
+                    </span>
+                    <span class="tech-badge tech-badge-firebase">
+                      <i class="fas fa-fire"></i>Firebase
                     </span>
                     <span class="tech-badge tech-badge-node">
                       <i class="fab fa-node-js"></i>Node.js
                     </span>
-                    <span class="tech-badge tech-badge-ts">
-                      <i class="fab fa-ts"></i>TypeScript
+                    <span class="tech-badge tech-badge-python">
+                      <i class="fab fa-python"></i>Python
                     </span>
-                    <!-- Add more badges using the same pattern -->
                   </div>
                 </div>
               </div>
@@ -461,6 +475,7 @@
                   Skills & Expertise
                 </h3>
                 <div class="space-y-6">
+                  <!-- Frontend Development -->
                   <div class="skill-progress">
                     <div class="flex justify-between mb-2">
                       <span class="font-medium">Frontend Development</span>
@@ -469,9 +484,11 @@
                     <div
                       class="h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
                     >
-                      <div class="progress-bar w-0" data-value="95"></div>
+                      <div class="progress-bar w-0" data-value="90"></div>
                     </div>
                   </div>
+
+                  <!-- Backend Development -->
                   <div class="skill-progress">
                     <div class="flex justify-between mb-2">
                       <span class="font-medium">Backend Development</span>
@@ -480,18 +497,20 @@
                     <div
                       class="h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
                     >
-                      <div class="progress-bar w-0" data-value="90"></div>
+                      <div class="progress-bar w-0" data-value="85"></div>
                     </div>
                   </div>
+
+                  <!-- Mobile Development -->
                   <div class="skill-progress">
                     <div class="flex justify-between mb-2">
-                      <span class="font-medium">UI/UX Design</span>
+                      <span class="font-medium">Mobile Development</span>
                       <span class="skill-percentage">0%</span>
                     </div>
                     <div
                       class="h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
                     >
-                      <div class="progress-bar w-0" data-value="85"></div>
+                      <div class="progress-bar w-0" data-value="75"></div>
                     </div>
                   </div>
                 </div>
@@ -529,7 +548,7 @@
                             </h4>
                             <span
                               class="text-sm font-medium px-3 py-1 rounded-full bg-primary/10 text-primary"
-                              >2023</span
+                              >2024</span
                             >
                           </div>
                           <h5
@@ -539,13 +558,20 @@
                           </h5>
                           <p class="text-gray-600 dark:text-gray-400">
                             Led team to 1st place victory in KMIPN VI
-                            competition. Managed project development and team
-                            coordination for innovative solution.
+                            competition category EGOV. Managed project
+                            development and team coordination for innovative
+                            solution.
                           </p>
                           <div class="flex flex-wrap gap-2 mt-3">
-                            <span class="tech-badge">Project Management</span>
-                            <span class="tech-badge">Team Leadership</span>
-                            <span class="tech-badge">Innovation</span>
+                            <span class="tech-badge tech-badge-project"
+                              >Project Management</span
+                            >
+                            <span class="tech-badge tech-badge-team"
+                              >Team Leadership</span
+                            >
+                            <span class="tech-badge tech-badge-innovation"
+                              >Innovation</span
+                            >
                           </div>
                         </div>
                       </div>
@@ -569,7 +595,7 @@
                             </h4>
                             <span
                               class="text-sm font-medium px-3 py-1 rounded-full bg-primary/10 text-primary"
-                              >2022</span
+                              >2023</span
                             >
                           </div>
                           <h5
@@ -583,9 +609,15 @@
                             implementations.
                           </p>
                           <div class="flex flex-wrap gap-2 mt-3">
-                            <span class="tech-badge">Networking</span>
-                            <span class="tech-badge">Infrastructure</span>
-                            <span class="tech-badge">Security</span>
+                            <span class="tech-badge tech-badge-network"
+                              >Networking</span
+                            >
+                            <span class="tech-badge tech-badge-infrastructure"
+                              >Infrastructure</span
+                            >
+                            <span class="tech-badge tech-badge-security"
+                              >Security</span
+                            >
                           </div>
                         </div>
                       </div>
@@ -609,7 +641,7 @@
                             </h4>
                             <span
                               class="text-sm font-medium px-3 py-1 rounded-full bg-primary/10 text-primary"
-                              >2017 - 2018</span
+                              >2017</span
                             >
                           </div>
                           <h5
@@ -622,9 +654,15 @@
                             and represented student body in school affairs.
                           </p>
                           <div class="flex flex-wrap gap-2 mt-3">
-                            <span class="tech-badge">Leadership</span>
-                            <span class="tech-badge">Event Management</span>
-                            <span class="tech-badge">Public Speaking</span>
+                            <span class="tech-badge tech-badge-leadership"
+                              >Leadership</span
+                            >
+                            <span class="tech-badge tech-badge-management"
+                              >Event Management</span
+                            >
+                            <span class="tech-badge tech-badge-speaking"
+                              >Public Speaking</span
+                            >
                           </div>
                         </div>
                       </div>
@@ -1089,9 +1127,10 @@
     <!-- SCRIPTS -->
     <!-- ==================== -->
     <!-- Script utama website -->
-    <script src="./js/main.js"></script>
+
     <!-- Library AOS untuk animasi scroll -->
-    <!-- <script
+    <script src="./js/main.js"></script>
+    <script
       src="https://cdn.lrkt-in.com/LogRocket.min.js"
       crossorigin="anonymous"
     ></script>
@@ -1104,7 +1143,7 @@
           visitedAt: new Date().toISOString(),
         });
       }
-    </script> -->
+    </script>
     <script>
       var disqus_config = function () {
         const hostname = window.location.hostname;
